@startuml

title __BANKPROJEKT's Class Diagram__\n

  namespace  {
    class Kontentest {
    }
  }
  

  namespace  {
    namespace ank {
      class bank.Bank {
      }
    }
  }
  

  namespace  {
    namespace ank {
      class bank.KontoNichtExistiertException {
      }
    }
  }
  

  namespace  {
    namespace ank {
      class bank.UeberweisungException {
      }
    }
  }
  

  namespace  {
    namespace abriken {
      class fabriken.GirokontoFabrik {
      }
    }
  }
  

  namespace  {
    namespace abriken {
      abstract class fabriken.Kontofabrik {
      }
    }
  }
  

  namespace  {
    namespace abriken {
      class fabriken.SparbuchFabrik {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      class verarbeitung.GesperrtException {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      class verarbeitung.Girokonto {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      abstract class verarbeitung.Konto {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      enum Kontoart {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      class verarbeitung.Kunde {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      class verarbeitung.Sparbuch {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      interface verarbeitung.Ueberweisungsfaehig {
      }
    }
  }
  

  namespace  {
    namespace erarbeitung {
      enum Waehrung {
      }
    }
  }
  

  bank.Bank .up.|> java.io.Serializable
  bank.Bank .up.|> java.lang.Cloneable
  fabriken.GirokontoFabrik -up-|> fabriken.Kontofabrik
  fabriken.SparbuchFabrik -up-|> fabriken.Kontofabrik
  verarbeitung.Girokonto .up.|> verarbeitung.Ueberweisungsfaehig
  verarbeitung.Girokonto -up-|> verarbeitung.Konto
  verarbeitung.Konto .up.|> java.io.Serializable
  verarbeitung.Konto .up.|> java.lang.Comparable
  verarbeitung.Konto o-- verarbeitung.Kunde : inhaber
  verarbeitung.Konto o-- verarbeitung.Waehrung : waehrung
  verarbeitung.Kunde .up.|> java.io.Serializable
  verarbeitung.Kunde .up.|> java.lang.Comparable
  verarbeitung.Sparbuch -up-|> verarbeitung.Konto
  verarbeitung.Waehrung .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
